# contract_programming_test

./: .coverage  .gitignore  .mutmut-cache  README.md  pyproject.toml  setup.cfg
src/contract_programming_test/: .coverage  __init__.py  app.py  contracts.py  deal-test_app.py  min.py  test_app.py
src/tests/: test_app.py
