[project]
name = "contract-programming-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Max Caldwell", email = "max@scriptt.ai" }
]
dependencies = [
    "icontract>=2.6.6",
    "pytest>=8.1.1",
    "pydantic>=2.6.4",
    "hypothesis>=6.99.5",
    "icontract-hypothesis>=1.1.7",
    "coverage>=7.4.3",
    "deal[all] @ file:///Users/max/Documents/contract_programming_test/deal-4.24.3-py3-none-any.whl",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
app = "python src/contract_programming_test/app.py"
lint = "python -m deal lint src/contract_programming_test/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/contract_programming_test"]
